ey-cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ey-cart-deployment
  namespace: kgateway-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ey-cart
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: ey-cart
    spec:
      containers:
        - name: ey-cart
          image: muralisocial123/ey-cart:v1.1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: ey-cart-service
  namespace: kgateway-ns
spec:
  selector:
    app: ey-cart
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
