flipkart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-deployment
  namespace: kgateway-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flipkart
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: flipkart
    spec:
      containers:
        - name: flipkart
          image: muralisocial123/flipkart-clone-kuberox:v1.1.0
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: flipkart-service
  namespace: kgateway-ns
spec:
  selector:
    app: flipkart
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
