flower-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-deployment
  namespace: kgateway-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
        - name: flower
          image: muralisocial123/kyndrl-flower-app:v1.1.0
          ports:
            - containerPort: 3015
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: flower-service
  namespace: kgateway-ns
spec:
  selector:
    app: flower
  ports:
    - port: 3015
      targetPort: 3015
  type: ClusterIP
