transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-deployment
  namespace: kgateway-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: transaction
    spec:
      containers:
        - name: transaction
          image: muralisocial123/transaction-app:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: kgateway-ns
spec:
  selector:
    app: transaction
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
