http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route
  namespace: kgateway-ns
spec:
  parentRefs:
    - name: kgateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              value: /
      backendRefs:
        - name: fitness-service
          port: 5000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flower-route
  namespace: kgateway-ns
spec:
  parentRefs:
    - name: kgateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /flower
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              value: /flower
      backendRefs:
        - name: flower-service
          port: 3015
