http-routes2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route
spec:
  parentRefs:
    - name: kgateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /fit
      backendRefs:
        - name: fitness-tracker-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /hospital
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: hospital-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portfolio-service
          port: 80
